* (bug 31417) New ID mw-content-text around the actual page text, without categories,
  contentSub, ... The same div often also contains the class mw-content-ltr/rtl.
* (bug 27619) Remove preference option to display broken links as link?
* (bug 34896) Update jQuery JSON plugin to v2.3 (2011-09-17)
* (bug 34302) Add CSS classes to email fields in user preferences

=== Bug fixes in 1.20 ===
* (bug 30245) Use the correct way to construct a log page title.
* (bug 34237) Regenerate an empty user_token and save to the database
  when we try to set the user's cookies for login.
* (bug 32210) New edit emails for watched pages always provide a link to the
  edit which triggered the mail.
* (bug 12021) Added user talk link on Special:Listusers
* (bug 34445) section edit and TOC hide/show links are excluded from selection and
  copy/paste on supporting browsers
* (bug 34428) Fixed incorrect hash mismatch errors in the DiffHistoryBlob 
  history compression method.
* (bug 34702) Localised parentheses are now used in more special pages.
* (bug 34723) When editing a script page on a RTL wiki the textbox should be LTR.
* (bug 34762) Calling close() on a DatabaseBase object now clears the connection.
* (bug 34863) Show deletion log extract on non-existent file pages if applicable.
* (bug 28019) Let ?preloadtitle=foo be passed on to target of
  Special:MyPage and Special:MyTalk
* (bug 34929) Show the correct diff when a section edit is rejected by the spam 
  filter

=== API changes in 1.20 ===
* (bug 34316) Add ability to retrieve maximum upload size from MediaWiki API.
* (bug 34313) MediaWiki API intro message about "HTML format" should mention
  the format parameter.

=== Languages updated in 1.20 ===

MediaWiki supports over 350 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

* (bug 34192) Namespace gender aliases for Albanian languages (sq & aln)
